tests/compile/derive-missing-strategy.stderr
error[E0425]: cannot find function `my_custom_merge_strategy` in this scope
 --> tests/compile/derive-missing-strategy.rs:5:24
  |
5 |     #[merge(strategy = my_custom_merge_strategy)]
  |                        ^^^^^^^^^^^^^^^^^^^^^^^^ not found in this scope
